# imgdedup

./: .gitignore  AGENTS.md  README.md  check_threshold.ipynb  config.yaml  config.yolo-dedup.yaml  main.py  pyproject.toml
dedup/: __init__.py  cache.py  cli.py  config.py  deletion.py  exporting.py  filesystem.py  hardware.py  hashing.py  matching.py  models.py  preview.py  quality.py  reporting.py  selection.py  selection_reporting.py  similarity.py  yolo.py
tests/: test_config.py  test_selection_workflow.py  test_yolo_dedup.py
